# ReaderOCR

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: plan.md
docs/specs/: step-08-window-enumeration.md  step-09-region-selection.md  step-10-page-capture.md  step-11-page-turn-automation.md  step-12-batch-capture-loop.md  step-13-duplicate-detection.md  step-14-sidecar-setup.md  step-15-image-preprocessing.md  step-16-ocr-execution.md  step-17-layout-analysis.md  step-18-text-extraction.md  step-19-page-number-removal.md  step-20-header-footer-filtering.md  step-21-paragraph-reconstruction.md  step-22-chapter-detection.md  step-23-ollama-postprocessing.md  step-24-side-by-side-viewer.md  step-25-confidence-highlighting.md  step-26-chapter-boundary-editor.md  (+21 more)
scripts/: generate_fixtures.py
src/: App.spec.ts  App.vue  protocol.ts
src-python/: pyproject.toml  requirements-dev.txt  requirements.txt
src-python/kindleocr/: __init__.py  __main__.py  protocol.py  server.py
src-python/kindleocr/epub/: __init__.py  builder.py  chapter_mapper.py  html_formatter.py
src-python/kindleocr/ocr/: __init__.py  engine.py  paddle_ocr.py  preprocessing.py
src-python/kindleocr/ollama/: __init__.py
src-python/kindleocr/processing/: __init__.py  paragraphs.py
src-python/tests/: conftest.py  test_chapter_mapper.py  test_epub_builder.py  test_ocr.py  test_paragraphs.py  test_preprocessing.py  test_server.py  test_smoke.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/capture/: batch.rs  duplicate.rs  mod.rs  reconcile.rs  region.rs  session.rs  windows_api.rs
src-tauri/src/keyboard/: input.rs
src-tauri/src/sidecar/: client.rs
(+37 files in other folders)
