[project]
name = "kindleocr"
version = "0.1.0"
description = "OCR and text processing sidecar for KindleOCR"
requires-python = ">=3.9"
license = "MIT"

dependencies = [
    "Pillow>=10.0",
    "numpy>=1.24",
    "ebooklib>=0.18",
]

[project.optional-dependencies]
ocr = [
    "paddlepaddle>=2.6",
    "paddleocr>=2.7",
]
ollama = [
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
